- Improved Debug Logging field description for better user understanding
- Enhanced admin settings UI with conditional override instructions

### Fixed
- Fixed database schema mismatch for prompts table (missing post_id column)
- Added foreign key constraint for prompts table
- Fixed debug mode/admin form value mismatch causing confusing status display

### Removed
- Removed hardcoded GPTPG_DEBUG_MODE constant from plugin files

## [0.0.14] - 2025-07-31
### Fixed
- Fixed nonce validation errors across all AJAX steps (Step 1-4)
- Fixed GitHub snippet link extraction to show only relevant URLs in Step 3
- Fixed gist embed URL decoding to extract actual GitHub URLs from target parameter
- Fixed GitHub organization name from 'ipokkel' to 'strangerstudios' in all extraction patterns
- Fixed Step 2 data flow to preserve GitHub links detected in Step 1
- Fixed fallback to potential snippet URL generation when actual links are available

### Changed
- Updated debug mode from 'debug' to 'production' for cleaner operation
- Improved GitHub URL extraction logic to handle gist embed URLs properly
- Enhanced Step 1→2→3 data flow to maintain GitHub link consistency

### Removed
- Removed debug logging to WordPress debug.log while preserving internal plugin debugging

## [0.0.13] - 2025-07-28
### Added
- Added comprehensive debug logging system with production/review mode toggle
- Added plugin-specific logs directory under /wp-content/plugins/gpt-prompt-generator/logs
- Added plain text README.txt for accessibility and WordPress repository compatibility
- Added improved admin menu with debug settings and test logging features

### Changed
- Completely refactored storage system to use post_id instead of sessions
- Improved database schema with proper foreign key constraints
- Updated README documentation with clearer setup instructions
- Optimized code snippet detection and extraction from post content

### Fixed
- Fixed SQL error in ALTER TABLE foreign key constraint